# oop_lab5

./: CMakeLists.txt  README.md  fixed_memory.cpp  fixed_memory.h  forward_list.h  main.cpp
tests/: tests5.cpp
